fix_issue_01 (#208)
* [删除]移除一些历史遗留代码

* Update README.adoc

---------

Signed-off-by: zheng <techa@foxmail.com>